# BAaP

LR1/: BlockshemeLR1.vsdx  CMakeCache.txt  CMakeLists.txt  Makefile  Task_3  Task_3.cpp  a.out  cmake_install.cmake  main  main_asan  test  Отличия основных характеристик ЯП.xlsx  Отличия основных характеристик ЯП.xlsx:Zone.Identifier
LR2/Task_1/: Task_1  Task_1.cpp  task1
LR2/Task_10/: Task_10.cpp  task10
LR2/Task_11/: Task_11.cpp  task11
LR2/Task_12/: Task_12.cpp  task12
LR2/Task_2/: Task_2.cpp  main
LR2/Task_3/: Task_3.cpp  main
LR2/Task_4/: Task_4.cpp  main
LR2/Task_5/: Task_5.cpp  task5
LR2/Task_6/: Task_6.cpp  task6
LR2/Task_7/: Task_7.cpp  task7
LR2/Task_8/: Task_8.cpp  task8  triangle_asan  triangle_lsan  triangle_tsan  triangle_ubsan
LR2/Task_9/: Task_9.cpp  task9
LR3/Task_1/: main  main.cpp
LR3/Task_2/: main  main.cpp
LR3/Task_3/: main  main.cpp
LR3/Task_4/: lr3.vsdx  main  main.cpp
LR3/Task_5/: lr3task5.vsdx  main  main.cpp
LR3/Task_6/: main  main.cpp
LR3/Task_7/: main  main.cpp
LR3/Task_8/: main  main.cpp
LR4/: CMakeLists.txt
LR4/Task_1/: main.cpp  shift.cpp  shift.h
LR4/Task_2/: main.cpp  saddle.cpp  saddle.h
LR4/Task_3/: even.cpp  even.h  main.cpp
LR4/Task_4/: diagSum.c  diagSum.h  lr4task4.vsdx  main.c
LR4/Task_5/: main.c  saper.c  saper.h
LR4/Task_6/: magicSqr.c  magicSqr.h  main.c
LR4/tests/: tests.cpp
LR5/: .gitignore  CMakeLists.txt
LR5/include/: mathdisp.h  rec.h
LR5/src/LR5_1/: main.cpp
LR5/src/LR5_2/: main.cpp
LR5/src/LR5_DynamicLib/: rec.cpp
LR5/src/LR5_StaticLib/: mathdisp.cpp
LR5/tests/: gtest.cpp
LR5_345/: CMakeLists.txt
LR5_345/LR5_3/: diag.cpp  main.cpp
LR5_345/LR5_4/: main.cpp  nullElem.cpp
LR5_345/LR5_5/: main.cpp  odd.cpp
LR5_345/include/: diag.h  nullElem.h  odd.h
LR5_345/tests/: tests.cpp
LR6/: .clang-format  CMakeLists.txt
LR6/Task_1/: even_groups.cpp  lab6t1.vsdx  main.cpp
LR6/Task_2/: lab6task2.vsdx  main.cpp  substr.cpp
LR6/Task_3/: inplace.cpp  lab6t3vsdx.vsdx  main.cpp
LR6/include/: even_groups.h  inplace.h  substr.h
LR6/tests/: gtests.cpp
